[gd_scene load_steps=3 format=2]

[ext_resource path="res://StorageDescriptionShort.gd" type="Script" id=1]
[ext_resource path="res://arts/artText/textoPequeno.tres" type="DynamicFont" id=2]

[node name="StorageDescriptionShort" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0.0431373, 1 )

[node name="TypeA" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 25.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "TypeA - 10000"

[node name="TypeB" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -10.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "TypeB - 10000"

[node name="TypeC" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
custom_colors/font_color = Color( 0, 0, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "TypeC - 10000"
